# yandex_second_sprint

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: errors.rs  models.rs
common/src/errors/: quote.rs  symbol.rs
common/src/models/: quote.rs  symbol.rs
quote_client/: Cargo.toml
quote_client/src/: main.rs  utils.rs
quote_server/: Cargo.toml
quote_server/src/: constants.rs  errors.rs  main.rs  quote_generator.rs  server.rs
