[workspace]
members = ["common", "quote_client", "quote_server"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive", "serde_derive"] }
serde_json = { version = "1" }
thiserror = { version = "2" }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
rand = { version = "0.10.0-rc.5" }
